--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".compass">
-
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_compass"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.compass.Compass">
+        tools:context="com.example.inlamning1.com.example.HelloSensor.Compass">
 
     <TextView
+        android:id="@+id/txt_azimuth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textSize="40sp"
-        android:textColor="#000"
-        android:textStyle="bold"
         android:text="0°"
-        android:id="@+id/txt_azimuth"/>
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
 
     <ImageView
@@ -35,5 +28,4 @@
         android:id="@+id/img_compass"/>
 
     </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
 
